# janus

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  index.html  janus.service  janus.service.template  ops.yaml  ops.yaml.template  pyproject.toml  server.py  service_setup.md
.aiswarm/prompts/: worker_long.md
backlog/: config.yml
backlog/completed/: task-12 - Consider-making-a-contentless-version-public.md  task-13 - Speed-up-initial-dashboard-load-of-data-projects.md  task-16 - Public-release-prep-LICENSE-gitignore-aiswarm-smoke-GitHub-meta.md  task-17 - Add-Claude-Haiku-to-enrich-meta-skill-and-clean-docs.md  task-18 - Decision-skip-automated-test-suite-validate-manual-smoke-only.md  task-19 - Support-production-non-watch-mode-for-development-servers.md  task-2 - add-swarm-config.md  task-8 - Replace-jump-buttons-with-filters-and-add-command-search.md
backlog/tasks/: task-10 - muxpod-direct-links.md  task-11 - Create-new-project-flow.md  task-12 - Consider-making-a-contentless-version-public.md  task-13 - Speed-up-initial-dashboard-load-of-data-projects.md  task-14 - Consider-multi-server-remote-host-Janus-setups.md  task-16 - Public-release-prep-LICENSE-gitignore-aiswarm-smoke-GitHub-meta.md  task-19 - Support-production-non-watch-mode-for-development-servers.md  task-3 - Tmuxhop.md  (+6 more)
data.example/: janus.json  myproject.json
ide/: SECURITY.md  ops.yaml
mk/: autostart.py  clone.sh  do.sh  enrich_meta.py  install-ide-tools.sh  new_project.defaults.json  new_project.py  ops.py  paths.py  swarm.py  sync_repo_urls.py  validate.py
swarm/: janus.yaml
(+7 files in other folders)
